--- a/assets/templates/appResume/premium/editable/editableSkills.html
+++ b/assets/templates/appResume/premium/editable/editableSkills.html
@@ -17,8 +17,8 @@
         <div class="row">
             <div class="col-md-12 xs-mb-m sm-mb-l">
                 <div class="pos-rel">
-                    <span class="input-title">описание навыков</span>
-                    <textarea onInput={ $Editable.component.autoCommit } class="textarea textarea-xl" style="height:330px" data-name="text" name="text_data" autocomplete="off">{ data.text }</textarea>
+                    <span class="input-title">описание компетенций</span>
+                    <textarea onInput={ $Editable.component.autoCommit } class="textarea textarea-xl" style="height:330px" data-name="text" name="text_data" autocomplete="off" placeholder="Текст описание, в свободной форме изложите о своих проффесиональных качествах">{ data.text }</textarea>
                 </div>
             </div>
             <div class="col-md-12">
