--- a/assets/templates/appResume/premium/editable/editableVisible.html
+++ b/assets/templates/appResume/premium/editable/editableVisible.html
@@ -8,7 +8,7 @@
                 <div class="title title-m text-truncate">{ item.title }</div>
             </div>
             <div class="col-xs-6 col-sm-4 pt-xs xs-pt-xxs mb-s { app.device.isPhone ? 'text-right' : 'text-left' }">
-                <ui-switcher commit="autoCommitValue" i={ i } value={ item.active }></ui-switcher>
+                <ui-switcher color="white" commit="autoCommitValue" i={ i } value={ item.active }></ui-switcher>
             </div>
         </virtual>
     </div>
