--- a/assets/templates/appResume/premium/editable/editableWorksItem.html
+++ b/assets/templates/appResume/premium/editable/editableWorksItem.html
@@ -14,7 +14,7 @@
     </div>
     <div class="row mb-s">
         <div class="col-xs-24">
-            <textarea onInput={ $Editable.component.autoCommitItems } class="textarea textarea-xl" placeholder="Краткое описание" data-name="text" autocomplete="off">{ opts.item.text }</textarea>
+            <textarea onInput={ $Editable.component.autoCommitItems } class="textarea textarea-xl" placeholder="Постарайтесь вспомнить и сформулировать ваши проффесиональные достижения в проекте, без расплывчатых фраз, емко выделите важные для работодателя моменты" data-name="text" autocomplete="off">{ opts.item.text }</textarea>
         </div>
     </div>
     <div class="row mb-xs">
