--- a/views/premium.html
+++ b/views/premium.html
@@ -47,11 +47,11 @@
     <script src="/assets/js/premium/templates.editable.js"></script>
     <script src="/assets/js/premium/templates.components.js"></script>
     <script src="/assets/templates/appResume/premium/templates/template1.html" type="riot/tag"></script>
-    <script src="/assets/templates/appResume/commons/ui/buttonSave.html" type="riot/tag"></script>
-    <script src="/assets/templates/appResume/commons/sections/finish.html" type="riot/tag"></script>
-    <script src="/assets/templates/appResume/premium/editable/editableSocial.html" type="riot/tag"></script>
-    <script src="/assets/templates/ui/switcher.html" type="riot/tag"></script>
-    <script src="/assets/templates/appResume/premium/sections/menu/menuItems.html" type="riot/tag"></script>
+    <script src="/assets/templates/appResume/premium/editable/editableSalary.html" type="riot/tag"></script>
+    <script src="/assets/templates/appResume/premium/editable/editableVisible.html" type="riot/tag"></script>
+    <script src="/assets/templates/appResume/premium/editable/editableWorksItem.html" type="riot/tag"></script>
+    <script src="/assets/templates/appResume/premium/editable/editableSkills.html" type="riot/tag"></script>
+    <script src="/assets/templates/appResume/premium/editable/editableCourses.html" type="riot/tag"></script>
 
     <!--/ Modules /-->
     <script src="/assets/templates/modules/loader.html" type="riot/tag"></script>
@@ -69,10 +69,11 @@
     <script src="/assets/js/components/i18n/i18n.js"></script>
     <script src="/assets/js/components/i18n/resume/premium/template/ru.js"></script>
     <script src="/assets/js/components/tutorial/resume/premium/main.js"></script>
-    <!-- <script src="/assets/js/components/help/resume/premium/photo.js"></script>
+    <script src="/assets/js/components/help/resume/premium/photo.js"></script>
     <script src="/assets/js/components/help/resume/premium/post.js"></script>
     <script src="/assets/js/components/help/resume/premium/salary.js"></script>
     <script src="/assets/js/components/help/resume/premium/tags.js"></script>
+    <script src="/assets/js/components/help/resume/premium/appeal.js"></script>
     <script src="/assets/js/components/help/resume/premium/about.js"></script>
     <script src="/assets/js/components/help/resume/premium/social.js"></script>
     <script src="/assets/js/components/help/resume/premium/works.js"></script>
@@ -80,7 +81,7 @@
     <script src="/assets/js/components/help/resume/premium/education.js"></script>
     <script src="/assets/js/components/help/resume/premium/courses.js"></script>
     <script src="/assets/js/components/help/resume/premium/languages.js"></script>
-    <script src="/assets/js/components/help/resume/premium/jobs.js"></script> -->
+    <script src="/assets/js/components/help/resume/premium/jobs.js"></script>
     <script src="/assets/js/plugins.js"></script>
 
     <script src="/assets/js/store/account.js"></script>
