--- a/assets/templates/ui/textarea.html
+++ b/assets/templates/ui/textarea.html
@@ -39,6 +39,7 @@
         else if ($.opts.commit && $.parent[$.opts.commit]){
             $.parent[$.opts.commit](value, $.opts.i);
         }
+        $.value = value;
     };
 
 </script>
