--- a/public/css/sections/jobs/_responsive.scss
+++ b/public/css/sections/jobs/_responsive.scss
@@ -6,4 +6,7 @@
     .jobs__search__sidebar {
         transform:translate3d(calc(10.5vw - 50%), 0, 0);
     }
+    .vacancy__container {
+        max-width:910px;
+    }
 }
