--- a/views/index-mobile.html
+++ b/views/index-mobile.html
@@ -44,7 +44,7 @@
     <script src="/assets/js/libs/jquery.mobile.custom.min.js"></script>
     <script src="/assets/js/libs/modernizr.custom.js"></script>
     <script src="/assets/js/libs/fastclick.js"></script>
-    <script src="/assets/js/libs/riot/riot+compiler.js"></script>
+    <script src="/assets/js/libs/riot/riot+compiler.update.js"></script>
     <script src="/assets/js/libs/baobab.js"></script>
     <script src="/assets/js/libs/underscore-min.js"></script>
     <script src="/assets/js/libs/store.min.js"></script>
