--- a/assets/css/ui/basic/_balloon.scss
+++ b/assets/css/ui/basic/_balloon.scss
@@ -38,7 +38,9 @@
   margin-bottom: 5px;
 }
 [data-balloon]:hover:before,
-[data-balloon]:hover:after {
+[data-balloon]:hover:after,
+[data-balloon-show="true"]:before,
+[data-balloon-show="true"]:after {
   -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=100)";
   filter: alpha(opacity=100);
   -khtml-opacity: 1;
@@ -74,7 +76,9 @@
   margin-bottom: 0;
 }
 [data-balloon-pos="down"]:hover:before,
-[data-balloon-pos="down"]:hover:after {
+[data-balloon-pos="down"]:hover:after,
+[data-balloon-pos="down"][data-balloon-show="true"]:before,
+[data-balloon-pos="down"][data-balloon-show="true"]:after {
   -webkit-transform: translate(-50%, 0);
   -ms-transform: translate(-50%, 0);
   transform: translate(-50%, 0);
@@ -101,7 +105,9 @@
   margin-bottom: 0;
 }
 [data-balloon-pos="left"]:hover:before,
-[data-balloon-pos="left"]:hover:after {
+[data-balloon-pos="left"]:hover:after,
+[data-balloon-pos="left"][data-balloon-show="true"]:before,
+[data-balloon-pos="left"][data-balloon-show="true"]:after {
   -webkit-transform: translate(0, -50%);
   -ms-transform: translate(0, -50%);
   transform: translate(0, -50%);
@@ -127,7 +133,9 @@
   margin-left: 5px;
 }
 [data-balloon-pos="right"]:hover:before,
-[data-balloon-pos="right"]:hover:after {
+[data-balloon-pos="right"]:hover:after,
+[data-balloon-pos="right"][data-balloon-show="true"]:before,
+[data-balloon-pos="right"][data-balloon-show="true"]:after {
   -webkit-transform: translate(0, -50%);
   -ms-transform: translate(0, -50%);
   transform: translate(0, -50%);
