--- a/assets/templates/ui/input.html
+++ b/assets/templates/ui/input.html
@@ -1,8 +1,8 @@
 <ui-input class={ opts.autosuggestsize ? 'display-block input-autosuggest input-autosuggest-' + opts.autosuggestsize : 'display-block input-autosuggest input-autosuggest-m' }>
 
-    <input name="input" onInput={ onInput } onUpdate={ opts.onupdate ? opts.onupdate : "none" } class="input input-{ opts.size ? opts.size : 'm' } { opts.color } { opts.align ? 'text-' + opts.align : '' } { input-rounded : opts.rounded }" value={ value } placeholder={ opts.placeholder } disabled={ typeof opts.disabled !== 'undefined' } type="text" autocomplete="off" spellcheck="false">
+    <input name="input" onInput={ onInput } onKeyDown={ opts.autosuggest ? autosuggest.navigate : false } onUpdate={ opts.onupdate ? opts.onupdate : "none" } class="input input-{ opts.size ? opts.size : 'm' } { opts.color } { opts.align ? 'text-' + opts.align : '' } { input-rounded : opts.rounded }" value={ value } placeholder={ opts.placeholder } disabled={ typeof opts.disabled !== 'undefined' } type="text" autocomplete="off" spellcheck="false">
 
-    <div if={ opts.autosuggest } class="input-autosuggest-items"><div onClick={ autosuggest.select } each={ item in autosuggest.items } no-reorder class="input-autosuggest-item">
+    <div if={ opts.autosuggest } class="input-autosuggest-items"><div onClick={ autosuggest.select } each={ item in autosuggest.items } no-reorder class="input-autosuggest-item" data-active={ item.active }>
         <div class="input-autosuggest-item-title">{ item.text }</div>
     </div></div>
 
@@ -72,6 +72,7 @@
         else if ($.opts.commit && $.parent[$.opts.commit]){
             $.parent[$.opts.commit](value, $.opts.i);
         }
+        $.value = value;
     };
 
     $.autosuggest = {
@@ -83,7 +84,7 @@
         items: [],
 
         select: function(){
-            $.autosuggest.update([], this.item.text);
+            $.autosuggest.update([], this.item);
         },
 
         request: function(method, value){
@@ -105,17 +106,56 @@
             }
         },
 
-        update: function(items, value){
+        update: function(items, item){
             $.autosuggest.items = items;
-            if (value){
+            if (item){
                 $.update({
-                    value: value
+                    id: item.id,
+                    value: item.text
                 })
-                $.onUpdate(this, value);
+                $.onUpdate(this, item.text);
             }
             else {
                 $.update();
             }
+        },
+
+        navigate: function(e){
+            if ([13, 38, 40].indexOf(e.keyCode) > -1 && _.isEmpty($.autosuggest.items)) {
+                e.preventDefault();
+                return true;
+            }
+            var items = $.autosuggest.items,
+                length = items.length;
+            if (length > 0 && [13, 38, 40].indexOf(e.keyCode) > -1) {
+                e.preventDefault();
+                // Get the currently selected item
+                var activeIndex = null;
+                for (var i = 0; i < length; i++) {
+                    var item = items[i];
+                    if (item.active) {
+                        activeIndex = i;
+                        break;
+                    }
+                }
+
+                // We're leaving this item
+                if (activeIndex != null) items[activeIndex].active = false;
+
+                if (e.keyCode == 38) {
+                    // Move the active state to the next item lower down the index
+                    if (activeIndex == null || activeIndex == 0) items[length - 1].active = true;else items[activeIndex - 1].active = true;
+                } else if (e.keyCode == 40) {
+                    // Move the active state to the next item higher up the index
+                    if (activeIndex == null || activeIndex == length - 1) items[0].active = true;else items[activeIndex + 1].active = true;
+                } else if (e.keyCode == 13 && activeIndex != null) {
+                    $.autosuggest.select.call({
+                        item: items[activeIndex]
+                    })
+                }
+                $.update();
+            }
+            return true;
         },
 
         handleClickOutside: function(e){
