--- a/public/templates/client/jobs/search/panel/searchPanel.html
+++ b/public/templates/client/jobs/search/panel/searchPanel.html
@@ -24,15 +24,8 @@
         </div>
         <div class="col-md-4">
             <div class="jobs__search__nav__options">
-                <div class="jobs__search__nav__options__item" data-item="settings">
-                    <svg viewBox="0 0 16 16" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"><path d="M0 3h9v2H0V3zm0 4h6v2H0V7zm0 4h8v2H0v-2zm13-8v6l1.5-1.5L16 9l-4 4-4-4 1.5-1.5L11 9V3h2z"/></svg>
-                </div>
-                <div class="jobs__search__nav__options__item" data-item="list-less" data-balloon="С описанием" data-active="true">
-                    <svg viewBox="0 0 16 16" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"><path d="M2 3h12v4H2V3zm0 6h12v4H2V9z"/></svg>
-                </div>
-                <div class="jobs__search__nav__options__item" data-item="list-more" data-balloon="Без описания">
-                    <svg viewBox="0 0 16 16" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"><path d="M2 3h12v2H2V3zm0 4h12v2H2V7zm0 4h12v2H2v-2z"/></svg>
-                </div>
+                <jobs-search-panel-settings></jobs-search-panel-settings>
+                <jobs-search-panel-views></jobs-search-panel-views>
             </div>
         </div>
     </div>
