--- a/public/templates/client/jobs/search/searchContent.html
+++ b/public/templates/client/jobs/search/searchContent.html
@@ -1,22 +1,30 @@
 <jobs-search-content-client class="section jobs__search__content">
 
     <div class="jobs__list">
+        <div if={ !$store.jobs.items.length } class="jobs__list__empty text-center">
+            <h3 class="c-silver mb-s">Нет подходящих результатов</h3>
+            <p class="mb25">попробуйте смягчить условия поиска</p>
+            <a onClick={ onBack } onUpdate="none" href="/jobs/search/" class="btn btn-l btn-primary-hover-success">Вернуться на шаг назад</a>
+        </div>
         <div each={ item, i in $store.jobs.items } no-reorder class="jobs__list__item">
             <div class="jobs__list__item__content">
-                <a href="/jobs/vacancy/{ item.id }" class="jobs__list__item__title">{ item.name }</a>
+                <a target="_blank" href="/jobs/vacancy/{ item.id }/{ link(item.employer.name) }" class="jobs__list__item__title">{ item.name }</a>
                 <div if={ item.salary } class="jobs__list__item__salary">
-                    { item.salary.from } <span if={ item.salary.to }>&mdash; { item.salary.to }</span> <span class="jobs__list__item__salary__rub">₽</span>
+                    { 'от' : item.salary.from } { _.numberFormat(item.salary.from, 0, ".", " ") } <span if={ item.salary.to }>до { _.numberFormat(item.salary.to, 0, ".", " ") }</span> { currency(item.salary.currency) }
                 </div>
                 <div class="jobs__list__item__text">
-                    <strong>Требования:</strong> { item.snippet.requirement }
+                    <strong>Требования:</strong> { highlight(item.snippet.requirement) }
                 </div>
                 <div class="jobs__list__item__company">
-                    { item.employer.name }
+                    <div class="jobs__list__item__company__text">{ item.employer.name }</div>
                 </div>
-                <div class="jobs__list__item__city">
-                    <span>{ item.area.name }</span>&nbsp;&nbsp;•&nbsp;&nbsp;{ moment(item.published_at).format("D MMMM") }
+                <div class="jobs__list__item__address">
+                    <span class="jobs__list__item__address__city">{ item.area.name }</span><span if={ item.address && item.address.metro } class="jobs__list__item__address__metro"><span class="c-gray">&nbsp;&nbsp;•&nbsp;&nbsp;</span>{ item.address.metro.station_name }</span>&nbsp;&nbsp;•&nbsp;&nbsp;{ moment(item.published_at).format("D MMMM") }
                 </div>
-                <a href="/jobs/vacancy/{ item.id }/response" class="jobs__list__item__response">Откликнуться</a>
+                <div class="jobs__list__item__buttons">
+                    <icon-like color="blueBright" size="xs"></icon-like>
+                    <div class="btn-default btn-m">Откликнуться</div>
+                </div>
             </div>
         </div>
     </div>
@@ -24,6 +32,24 @@
 <script>
 
     var $ = this;
+
+    $.onBack = function(){
+        History.back();
+    };
+
+    $.link = function(link){
+        return link.replace(/\s+/gi, "-");
+    }
+
+    $.highlight = function(text){
+        return text.replace(/<highlighttext>/, '').replace(/<\/highlighttext>/, '');
+    }
+
+    $.currency = function(code){
+        if (code){
+            return _.findWhere($store.jobs.dictionary.get("currency"), {"code": code}).abbr;
+        }
+    }
 
 </script>
 
