--- a/views/index.html
+++ b/views/index.html
@@ -37,7 +37,7 @@
     <script src="/assets/js/libs/jquery.mobile.custom.min.js"></script>
     <script src="/assets/js/libs/modernizr.custom.js"></script>
     <script src="/assets/js/libs/fastclick.min.js"></script>
-    <script src="/assets/js/libs/riot/riot+compiler.js"></script>
+    <script src="/assets/js/libs/riot/riot+compiler.update.js"></script>
     <script src="/assets/js/libs/baobab.js"></script>
     <script src="/assets/js/libs/underscore-min.js"></script>
     <script src="/assets/js/libs/store.min.js"></script>
